--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-# Core Libraries
 torch>=2.0.0
 transformers>=4.30.0
 datasets>=2.12.0
@@ -7,5 +6,5 @@ scikit-learn>=1.2.0
 numpy>=1.23.0
 
 # Additional Dependencies
-itertools  # Built-in Python module, no installation required
-os  # Built-in Python module, no installation required
+itertools
+os
